--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ index.html
     <label>Name: <input type="text" name="name" required></label><br>
     <label>Email: <input type="email" name="email" required></label><br>
     <label>Phone: <input type="tel" name="phone" required></label><br>
+    <label>Department: <input type="text" name="department" required></label><br>
     <button type="submit">Register</button>
   </form>
 </body>
